--- a/public/main.css
+++ b/public/main.css
@@ -190,6 +190,11 @@ iframe {
 		margin: 0;
 	}
 
+	#myCarousel.carouselImage {
+	height: 600px;
+	width: 100%;
+}
+
 	img.thumbnail-img {
 	height: 600px;
 	width: 100%;
